// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SolutionTitle  in dark mode renders the home dashboard logo using mark dark mode URL 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="none"
>
  <EuiFlexItem
    className="eui-textCenter"
  >
    <div
      className="homSolutionPanel__customIcon"
    >
      <img
        alt="custom title logo"
        className="homSolutionPanel__customIconContainer"
        data-test-image-url="/darkModeUrl"
        data-test-subj="dashboardCustomLogo"
        src="/darkModeUrl"
      />
    </div>
    <EuiTitle
      className="homSolutionPanel__title eui-textInheritColor"
      data-test-subj="dashboardCustomTitle"
      data-test-title="custom title"
      size="s"
    >
      <h3>
        custom title
      </h3>
    </EuiTitle>
    <EuiText
      size="s"
    >
      <p
        className="homSolutionPanel__subtitle"
      >
        Visualize & analyze
         
        <EuiIcon
          type="sortRight"
        />
      </p>
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`SolutionTitle  in dark mode renders the home dashboard logo using mark default mode URL 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="none"
>
  <EuiFlexItem
    className="eui-textCenter"
  >
    <div
      className="homSolutionPanel__customIcon"
    >
      <img
        alt="custom title logo"
        className="homSolutionPanel__customIconContainer"
        data-test-image-url="/defaultModeUrl"
        data-test-subj="dashboardCustomLogo"
        src="/defaultModeUrl"
      />
    </div>
    <EuiTitle
      className="homSolutionPanel__title eui-textInheritColor"
      data-test-subj="dashboardCustomTitle"
      data-test-title="custom title"
      size="s"
    >
      <h3>
        custom title
      </h3>
    </EuiTitle>
    <EuiText
      size="s"
    >
      <p
        className="homSolutionPanel__subtitle"
      >
        Visualize & analyze
         
        <EuiIcon
          type="sortRight"
        />
      </p>
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`SolutionTitle  in dark mode renders the home dashboard logo using original in and out door logo 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="none"
>
  <EuiFlexItem
    className="eui-textCenter"
  >
    <EuiToken
      className="homSolutionPanel__icon"
      fill="light"
      iconType="undefined/opensearch_mark_dark_mode.svg"
      shape="circle"
      size="l"
    />
    <EuiTitle
      className="homSolutionPanel__title eui-textInheritColor"
      data-test-subj="dashboardCustomTitle"
      data-test-title="custom title"
      size="s"
    >
      <h3>
        custom title
      </h3>
    </EuiTitle>
    <EuiText
      size="s"
    >
      <p
        className="homSolutionPanel__subtitle"
      >
        Visualize & analyze
         
        <EuiIcon
          type="sortRight"
        />
      </p>
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`SolutionTitle  in default mode renders the home dashboard logo using mark default mode URL 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="none"
>
  <EuiFlexItem
    className="eui-textCenter"
  >
    <div
      className="homSolutionPanel__customIcon"
    >
      <img
        alt="custom title logo"
        className="homSolutionPanel__customIconContainer"
        data-test-image-url="/defaultModeUrl"
        data-test-subj="dashboardCustomLogo"
        src="/defaultModeUrl"
      />
    </div>
    <EuiTitle
      className="homSolutionPanel__title eui-textInheritColor"
      data-test-subj="dashboardCustomTitle"
      data-test-title="custom title"
      size="s"
    >
      <h3>
        custom title
      </h3>
    </EuiTitle>
    <EuiText
      size="s"
    >
      <p
        className="homSolutionPanel__subtitle"
      >
        Visualize & analyze
         
        <EuiIcon
          type="sortRight"
        />
      </p>
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`SolutionTitle  in default mode renders the home dashboard logo using original in and out door logo 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="none"
>
  <EuiFlexItem
    className="eui-textCenter"
  >
    <EuiToken
      className="homSolutionPanel__icon"
      fill="light"
      iconType="undefined/opensearch_mark_default_mode.svg"
      shape="circle"
      size="l"
    />
    <EuiTitle
      className="homSolutionPanel__title eui-textInheritColor"
      data-test-subj="dashboardCustomTitle"
      data-test-title="custom title"
      size="s"
    >
      <h3>
        custom title
      </h3>
    </EuiTitle>
    <EuiText
      size="s"
    >
      <p
        className="homSolutionPanel__subtitle"
      >
        Visualize & analyze
         
        <EuiIcon
          type="sortRight"
        />
      </p>
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`SolutionTitle  in default mode renders the title section of the solution panel 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="none"
>
  <EuiFlexItem
    className="eui-textCenter"
  >
    <div
      className="homSolutionPanel__customIcon"
    >
      <img
        alt="custom title logo"
        className="homSolutionPanel__customIconContainer"
        data-test-image-url="/defaultModeUrl"
        data-test-subj="dashboardCustomLogo"
        src="/defaultModeUrl"
      />
    </div>
    <EuiTitle
      className="homSolutionPanel__title eui-textInheritColor"
      data-test-subj="dashboardCustomTitle"
      data-test-title="custom title"
      size="s"
    >
      <h3>
        custom title
      </h3>
    </EuiTitle>
    <EuiText
      size="s"
    >
      <p
        className="homSolutionPanel__subtitle"
      >
        Visualize & analyze
         
        <EuiIcon
          type="sortRight"
        />
      </p>
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;
